--- a/mini projects/Ecommerce/package.json
+++ b/mini projects/Ecommerce/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
     "react": "^18.2.0",
+    "react-currency-format": "^1.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
